--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "private": false,
   "homepage": "https://algotech-dev.github.io/candle-chart/",
   "dependencies": {
+    "@chakra-ui/react": "^3.0.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.5",
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.10",
     "lightweight-charts": "^4.2.1",
+    "lucide-react": "^0.454.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
