--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.10",
+    "konva": "^9.3.16",
     "lightweight-charts": "^4.2.1",
     "lucide-react": "^0.454.0",
     "papaparse": "^5.4.1",
@@ -23,6 +24,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-financial-charts": "^2.0.1",
+    "react-icons": "^5.3.0",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
